# nasm

./: .editorconfig  .gitignore  .travis.yaml  .travis.yml  AUTHORS  CHANGES  COPYING  ChangeLog  Changes  INSTALL  LICENSE  Licence  MODIFIED  Makefile  Makefile.bc2  Makefile.bor  Makefile.dj  Makefile.dos  Makefile.in  Makefile.sc  Makefile.unx  Makefile.vc  Makefile.wc  Makefile.wcw  README  README.1st  README.md  README03.txt  README09b.txt  Readme  SubmittingPatches  TODO  Wishlist  aclocal.m4  assemble.c  assemble.h  autogen.sh  c16.mac  c32.mac  changed.asm  (+110 more)
.github/workflows/: ci-build.yml  ci.yml
Mkfiles/: Makefile.b32  Makefile.bc2  Makefile.bc3  Makefile.bor  Makefile.dcp  Makefile.dj  Makefile.djo  Makefile.dl  Makefile.dos  Makefile.emx  Makefile.lcc  Makefile.ms7  Makefile.os2  Makefile.sc  Makefile.scw  Makefile.unx  Makefile.vc  Makefile.wc  Makefile.wcd  Makefile.wcw  README  msvc.mak  netware.mak  openwcom.mak  owlinux.mak
asm/: asmutil.h  assemble.c  assemble.h  directiv.c  directiv.pl  error.c  eval.c  eval.h  evalstr.c  evalstr.h  exprdump.c  exprlib.c  float.c  floats.c  floats.h  getbool.c  labels.c  listing.c  listing.h  nasm.c  parser.c  parser.h  pptok.pl  pragma.c  preproc-nop.c  preproc.c  preproc.h  quote.c  quote.h  rdstrnum.c  segalloc.c  srcfile.c  srcfile.h  stdscan.c  stdscan.h  strfunc.c  tokhash.pl  uncompress.c  warnings.pl
autoconf/: gitignore
autoconf/helpers/: config.sub
autoconf/m4/: pa_add_cflags.m4  pa_add_flags.m4  pa_add_headers.m4  pa_add_langflags.m4  pa_add_ldflags.m4  pa_c_typeof.m4  pa_check_bad_stdc_inline.m4  pa_common_attributes.m4  pa_cross_compile.m4  pa_csym.m4  pa_endian.m4  pa_func_attribute.m4  pa_func_attribute_error.m4  pa_func_snprintf.m4  pa_func_vsnprintf.m4  pa_have_func.m4  pa_option_debug.m4  pa_option_lto.m4  pa_sym.m4
common/: common.c  errstubs.c  files.c
config/: msvc.h  unconfig.h  watcom.h
disasm/: disasm.c  disasm.h  diserror.c  ndisasm.c  prefix.c  sync.c  sync.h
doc/: 32bit.src  64bit.src  Makefile  Makefile.in  Readme  afmmetrics.ph  afmmetrics.pl  apx.src  changes.src  directiv.src  findfont.ph  genps.pl  genpsdriver.pl  head.ps  index.src  inslist.pl  insref.src  lang.src  macropkg.src  makedocs.bat  nasmdoc.css  nasmdoc.src  nasmlogo.eps  opt_var.txt  outfmt.src  preproc.src  psfonts.ph  pspdf.pl  pswidth.ph  rdsrc.pl  running.src  source.src  stdmac.src  syntax.src  ttfmetrics.ph
doc/latex/: .gitignore  Makefile
doc/metrics/: pagd8a.ph  pagdo8a.ph  pagk8a.ph  pagko8a.ph  pbkd8a.ph  pbkdi8a.ph  pbkl8a.ph  pbkli8a.ph  pcrb8a.ph  pcrbo8a.ph  pcrr8a.ph  pcrro8a.ph  phvb8a.ph  phvb8an.ph  phvbo8a.ph  phvbo8an.ph  phvl8a.ph  phvlo8a.ph  phvr8a.ph  phvr8an.ph  phvro8a.ph  phvro8an.ph  pncb8a.ph  pncbi8a.ph  pncr8a.ph  pncri8a.ph  pplb8a.ph  pplbi8a.ph  pplr8a.ph  pplri8a.ph  psyr.ph  ptmb8a.ph  ptmbi8a.ph  ptmr8a.ph  ptmri8a.ph  putb8a.ph  putbi8a.ph  putr8a.ph  putri8a.ph  pzcmi8a.ph  (+1 more)
editors/: builtin.mac  dumpbuiltin.sh  nasmtok.pl
headers/: c  doc  mac  perl  sh
include/: bytesex.h  compiler.h  disp8.h  error.h  files.h  hashtbl.h  iflag.h  ilog2.h  insns.h  labels.h  macros.h  md5.h  mempool.h  nasm.h  nasmint.h  nasmlib.h  nctype.h  opflags.h  perfhash.h  raa.h  rbtree.h  rdoff.h  saa.h  strlist.h  tables.h  ver.h  zdata.h
inttypes/: inttypes.h
inttypes/i16l32/: inttypes.h
inttypes/i32l32/: inttypes.h
lcc/: Readme  bind.c  lin-aout.c  lin-elf.c  x86nasm.md
lib/: md5c.c  snprintf.c  strlcpy.c  vsnprintf.c
macros/: altreg.mac  ifunc.mac  macros.pl  masm.mac  smartalign.mac  standard.mac  vtern.mac
misc/: Makefile.in  Nindent  altreg.inc  c16.mac  c32.mac  crcgen.c  dumpbuiltin.sh  emacstbl.pl  findleak.pl  findleak.txt  fmtinsns.pl  genfma.pl  makedist.sh  myC32.mac  nasm.sl  nasmstab  nxdisasm.pl  omfdump.c  pmw.bat  release  scitech.mac  tag-release  tagrelease
nasmlib/: alloc.c  alloc.h  asprintf.c  bsi.c  crc32.c  crc64.c  errfile.c  error.c  file.c  file.h  fileio.c  filename.c  hashtbl.c  ilog2.c  malloc.c  md5c.c  mempool.c  mmap.c  nasmlib.c  nctype.c  numstr.c  path.c  perfhash.pl  raa.c  rbtree.c  readnum.c  rlimit.c  saa.c  string.c  strlist.c  ver.c  zdata.c  zerobuf.c
nsis/: NASMMultiUser.nsh  getpearch.pl  nasm.nsi
output/: codeview.c  dwarf.h  elf.h  elf32.h  elf64.h  elfcommon.h  generic.mac  legacy.c  macho.h  nulldbg.c  nullout.c  outaout.c  outaout.mac  outas86.c  outas86.mac  outbin.c  outbin.mac  outcoff.c  outcoff.mac  outdbg.c  outelf.c  outelf.h  outelf.mac  outelf32.c  outelf64.c  outelfx32.c  outform.c  outform.h  outieee.c  outlib.c  outlib.h  outmac.c  outmac32.c  outmac64.c  outmacho.c  outmacho.mac  outmacho32.c  outmacho64.c  outobj.c  outobj.mac  (+8 more)
perllib/: Graph.pm  Graph.pod  README  gensv.pl  phash.ph  random_sv_vectors.ph  zdata.ph
rdoff/: Changes  Makefile  Makefile.in  Makefile.sc  Makefile.unx  README  collectn.c  collectn.h  hash.c  hash.h  ldrdf.c  ldsegs.h  multboot.h  rdf2bin.1  rdf2bin.c  rdf2ihx.c  rdfdump.c  rdflib.c  rdfload.c  rdfload.h  rdlar.c  rdlar.h  rdlib.c  rdlib.h  rdoff.c  rdoff.h  rdx.c  segtab.c  segtab.h  symtab.c  symtab.h
stdlib/: snprintf.c  strlcat.c  strrchrnul.c  vsnprintf.c
templates/: template.h
test/: Makefile  Makefile.in  _file_.asm  _version.asm  a32offs.asm  absolute.asm  addr64x.asm  align13.asm  align13s.asm  amx.asm  aoutso.asm  aouttest.asm  aouttest.c  apx.asm  avx-ifma-64.asm  avx-ifma.asm  avx-ne-convert-64.asm  avx-ne-convert.asm  avx-vnni-int16-64.asm  avx-vnni-int16.asm  avx-vnni-int8-64.asm  avx-vnni-int8.asm  avx-vnni.asm  avx.asm  avx005.asm  avx512cd.asm  avx512er.asm  avx512f.asm  avx512pf.asm  bcd.asm  binexe.asm  bintest.asm  br1879590.asm  br2030823.asm  br2148476.asm  br3028880.asm  br3041451.asm  br3058845.asm  br3109604.asm  br3392392.asm  (+148 more)
tools/: mkdep.pl  release  spdx.pl  syncfiles.pl
travis/: nasm-t.py
x86/: addflags.pl  bytecode.txt  cpunames.c  cpunames.ph  cpunames.pl  disp8.c  featureinfo.c  featureinfo.pl  features.ph  iflags.ph  insns-iflags.ph  insns-iflags.pl  insns.pl  preinsns.pl  regs.pl  sse2avx.pl  x86features.ph
zlib/: zconf.h
(+573 files in other folders)
